<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_connection_state"
    android:layout_width="match_parent"
    android:background="@color/bgColor"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent=".9"
        app:layout_constraintWidth_default="percent"

        app:layout_constraintHeight_percent=".4"
        app:layout_constraintHeight_default="percent"
        android:layout_marginTop="130dp"
        android:contentDescription="@string/error_image_no_connection_for_joker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/error_network" />

    <TextView
        android:id="@+id/no_connection_header"
        android:layout_width="254dp"
        android:layout_height="41dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/bold_font"
        android:text="@string/no_connection_text_header"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="254dp"
        android:layout_height="91dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/light_font"
        android:text="@string/no_connection_text_body"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_connection_header" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="128dp"
        android:layout_height="82dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher"
        android:contentDescription="@string/joker_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>